--- a/Theta Rhythm.tex
+++ b/Theta Rhythm.tex
@@ -1,4 +1,4 @@
-% Options for packages loaded elsewhere
+q	% Options for packages loaded elsewhere
 \PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 \documentclass[
